# PGR-310

./: .gitignore  .gitlab-ci.yml  README.md  dev_server.py  leak_test  notes.md
.github/workflows/: github-CI.yaml
C/: CMakeLists.txt  Makefile
C/include/algorithms/: anim.h  dom_anim.h  portfolio_fx.h  unified_sim.h  water_sim.h
C/include/entities/: skeleton_maths_entity.h  vector2Dentity.h
C/include/enum/: errors.h
C/include/maths/: skeleton_maths.h  vector2D.h
C/src/algorithms/: anim.c  dom_anim.c  portfolio_fx.c  unified_sim.c  water_sim.c
C/src/maths/: skeleton_maths.c  vector2D.c
C/test/: leak_test.c
assets/no_skeleton_sprites/: fish.avif  fish2.avif
css/: backupcss.css  style.css
data/: profile.example.xml  profile.xml
html/: benchmark.html  index.html  wasm_test.html
js/: coral_scene.js  script.js  vector2D.js  vector2D.wasm  water_theme.js
python_scripts/: lookup_trig.py
scripts/: build-pages.js  test-pages.js
server/: README.md  app.py
